--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Healthy Joy у Львові – це салон здоров’я та краси, що спеціалізується на масажі по східним методикам. Міжнародна мережа з кваліфікованими спеціалістами та натуральною клітинною косметикою з Китаю. Оздоровлюємо та даруємо задоволення вже 10 років."
+    />
+    <meta
+      name="keywords"
+      content="Масаж Львів, гуа-ша Львів, масаж обличчя Львів, оздоровлення, натуральна косметика Львів, салон краси Львів, оздоровлення Львів"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -20,31 +24,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;600&display=swap"
       rel="stylesheet"
     />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Healthy Joy</title>
+    <title>Healthy Joy — студія масажу у Львові</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXEg9Te6ei0kDUVwtPiLRCmhoWORUXT8g&map_ids=441bf404143afdaf&callback=initMap"></script>
   </body>
 </html>
