Fix Facebook pixel

--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,9 @@
       rel="stylesheet"
     />
     <title>Healthy Joy — студія масажу у Львові</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXEg9Te6ei0kDUVwtPiLRCmhoWORUXT8g&map_ids=441bf404143afdaf&callback=initMap"></script>
+    <script>
+      fbq("track", "Lead");
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
@@ -66,5 +64,14 @@
         src="https://www.facebook.com/tr?id=571760073992851&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+    <meta
+      name="facebook-domain-verification"
+      content="fd72qyufn0kufw5udot43trwjd96ga"
+    />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXEg9Te6ei0kDUVwtPiLRCmhoWORUXT8g&map_ids=441bf404143afdaf&callback=initMap"></script>
   </body>
 </html>
